<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/outline_calculate_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/numDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/numUno"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/numUno"
        app:layout_constraintTop_toBottomOf="@+id/numUno"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/suma"
        app:layout_constraintEnd_toEndOf="@+id/numUno"
        app:layout_constraintStart_toStartOf="@+id/numUno"
        app:layout_constraintTop_toBottomOf="@+id/numDos"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRest"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="@+id/numDos"
        app:layout_constraintStart_toStartOf="@+id/numDos"
        app:layout_constraintTop_toBottomOf="@+id/btnSum" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="@+id/btnMulti"
        app:layout_constraintStart_toStartOf="@+id/btnMulti"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/multiplica"
        app:layout_constraintEnd_toEndOf="@+id/btnRest"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/btnRest"
        app:layout_constraintTop_toBottomOf="@+id/btnRest" />
</androidx.constraintlayout.widget.ConstraintLayout>